@@ -1,34 +1,49 @@
 package com.example.demo.service.impl;
 
-import com.example.demo.model.Product;
 import com.example.demo.exception.ResourceNotFoundException;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
-import com.example.demo.service.ProductService;
+import com.example.demo.model.Product;
 import com.example.demo.repository.ProductRepository;
+import com.example.demo.service.ProductService;
+import org.springframework.stereotype.Service;
+
+import java.time.LocalDateTime;
 import java.util.List;
-@Service
-public class ProductServiceImpl implements ProductService{
-    @Autowired ProductRepository pro;
-    @Override
-public Product createProduct(Product product) {
 
-    if (product.getProductName() == null || product.getProductName().trim().isEmpty()) {
-        throw new IllegalArgumentException("Product name cannot be empty");
+@Service("productServiceImpl")
+public class ProductServiceImpl implements ProductService {
+
+    private final ProductRepository productRepository;
+
+    public ProductServiceImpl(ProductRepository productRepository) {
+        this.productRepository = productRepository;
     }
 
-    if (product.getSku() == null || product.getSku().trim().isEmpty()) {
-        throw new IllegalArgumentException("SKU cannot be empty");
+    @Override
+    public Product createProduct(Product product) {
+        if (product.getProductName() == null || product.getProductName().isBlank()) {
+            throw new IllegalArgumentException("Product name cannot be empty");
+        }
+
+        if (product.getSku() == null || product.getSku().isBlank()) {
+            throw new IllegalArgumentException("SKU cannot be empty");
+        }
+
+        productRepository.findBySku(product.getSku()).ifPresent(p -> {
+            throw new IllegalArgumentException("SKU already exists");
+        });
+
+        product.setCreatedAt(LocalDateTime.now());
+        return productRepository.save(product);
     }
 
-    return pro.save(product);
-}
     @Override
-    public Product getProduct(Long id){
-        return pro.findById(id).orElseThrow(()->new ResourceNotFoundException("Product Not Found"));
+    public Product getProduct(Long id) {
+        return productRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Product not found"));
     }
+
     @Override
-    public List<Product> getAllProducts(){
-        return pro.findAll();
+    public List<Product> getAllProducts() {
+        return productRepository.findAll();
     }
 }
